# Descryption

./: .gitignore  ASCII_text.py  Cargo.toml  DOCS.md  NOTES.md  PROGRESS.md  PROPOSAL.md  QoL.py  README.md  Rogue.py  TODO.md  bosses.py  card.py  card_library.py  config.json  config.txt  deck.py  duel.py  event.py  field.py  itertools312.py  menu.py  ping.txt  planning.txt  playtest notes.md  playtest notes.txt  rogue.py  setup.py  sigil_tools.py  sigils.py  test.py
.devcontainer/: devcontainer.json
.unittest/: test_oro_level.py
old code/: config.json  deck.py  duel.py  field.py  sigils.py
old code/testing/: unit_tests.py
src/: egui_app.rs  lib.rs  main.rs  terminal_test.rs
testing/: integration_tests.py  unit_tests.py
