[package]
name = "descryption"
version = "1.0.0-alpha.1"
edition = "2024"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_extras = { version = "0.32.0", default-features = false, features = ["image"] }
image = {version = '0.25', default-features = false, features = ["png"]}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# web-sys = { version = "=0.3.72", features = [
#     "GpuImageCopyBuffer"
# ] }
directories = "6.0.0"
serde_cbor = "0.11.0"
egui-file-dialog = "0.11.0"

strum = "0.27.1"
strum_macros = "0.27.1"

iter_mod = "0.1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
